Switch  to  for BSI 1.3.7 compatibility

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -621,7 +621,7 @@ body {
             line-height: 0;
             width: 1.8rem;
             height: 1.8rem;
-            background-color: $italia;
+            background-color: $primary;
             padding: 0.4rem;
             border-radius: 2rem;
         }
